--- a/ubuntu/xine-lib-1.1.16.4/debian/control
+++ b/ubuntu/xine-lib-1.1.16.4/debian/control
@@ -4,10 +4,10 @@ Priority: optional
 Maintainer: xine Developers <xine-devel@lists.sourceforge.net>
 Build-Depends: debhelper (>= 5.0.1), binutils (>= 2.12.90.0.9), pkg-config,
 	automake1.9, autoconf, libtool,
-	libavcodec-dev (>= 4:0.5+svn20090706-2ubuntu2) | libavcodeccvs-dev,
-	libavutil-dev (>= 4:0.5+svn20090706-2ubuntu2) | libavutilcvs-dev,
-	libavformat-dev (>= 4:0.5+svn20090706-2ubuntu2) | libavformatcvs-dev,
-	libpostproc-dev (>= 4:0.5+svn20090706-2ubuntu2) | libpostproccvs-dev,
+	libavcodec-dev  | libavcodeccvs-dev,
+	libavutil-dev  | libavutilcvs-dev,
+	libavformat-dev  | libavformatcvs-dev,
+	libpostproc-dev  | libpostproccvs-dev,
 	libxcb-xv0-dev | libxv-dev (<< 1:1.0.3),
 	libxcb-shm0-dev | libxv-dev (<< 1:1.0.3),
 	libxcb-shape0-dev | libxv-dev (<< 1:1.0.3),
