--- a/ubuntu/v4l-modules-source/debian/v4l2-firmware.preinst.in
+++ b/ubuntu/v4l-modules-source/debian/v4l2-firmware.preinst.in
@@ -3,7 +3,7 @@
 
 if [ install = "$1" -o upgrade = "$1" ]; then
         dpkg-divert --add --rename --package v4l2-firmware --divert /lib/firmware/v4l-cx2341x-init.mpg.wraped /lib/firmware/v4l-cx2341x-init.mpg
-        dpkg-divert --add --rename --package v4l2-firmware --divert/lib/firmware/v4l-cx2341x-enc.fw.wraped /lib/firmware/v4l-cx2341x-enc.fw
+        dpkg-divert --add --rename --package v4l2-firmware --divert /lib/firmware/v4l-cx2341x-enc.fw.wraped /lib/firmware/v4l-cx2341x-enc.fw
         dpkg-divert --add --rename --package v4l2-firmware --divert /lib/firmware/v4l-pvrusb2-29xxx-01.fw.wraped /lib/firmware/v4l-pvrusb2-29xxx-01.fw
 	dpkg-divert --add --rename --package v4l2-firmware --divert /lib/firmware/v4l-pvrusb2-24xxx-01.fw.wraped /lib/firmware/v4l-pvrusb2-24xxx-01.fw
 fi
