--- a/src/Orbiter/Maemo/src/debian/control
+++ b/src/Orbiter/Maemo/src/debian/control
@@ -3,10 +3,9 @@ Version: %%VERSION%%-%%PACKAGE_VERSION%%
 Section: user/extra
 Priority: optional
 Architecture: armel
-Pre-Depends: maemo-select-menu-location
 Depends: libsdl-gfx1.2-4, libsdl-image1.2, libsdl-sge, libsdl1.2, libxmu6, mysql-common, libmysqlclient12, libhttpfetcher1, libice6, libsm6, libxt6, libsdl-ttf2.0-0
-Installed-Size: 3832
+Installed-Size: %%SIZE%%
 Maintainer: Michael Stepanov <stepanov.michael@gmail.com>
 Description: LinuxMCE Orbiter is an application which allows to control your home automation system LinuxMCE
-	from your Nokia770/N800/N810. For more information, please, visit http://pluto-nokia.garage.maemo.org or
+	from your Nokia770/N800/N810/N900. For more information, please, visit http://pluto-nokia.garage.maemo.org or
 	http://linuxmce.com.
