--- a/ubuntu/v4l-modules-source/debian/v4l2-firmware.preinst.in
+++ b/ubuntu/v4l-modules-source/debian/v4l2-firmware.preinst.in
@@ -23,5 +23,6 @@ if [ install = "$1" -o upgrade = "$1" ]; then
 	dpkg-divert --add --rename --package v4l2-firmware --divert /lib/firmware/v4l-cx23418-cpu.fw.wraped /lib/firmware/v4l-cx23418-cpu.fw
 	dpkg-divert --add --rename --package v4l2-firmware --divert /lib/firmware/v4l-cx23418-apu.fw.wraped /lib/firmware/v4l-cx23418-apu.fw
 	dpkg-divert --add --rename --package v4l2-firmware --divert /lib/firmware/dvb-usb-umt-010-02.fw.wraped /lib/firmware/dvb-usb-umt-010-02.fw
+	dpkg-divert --add --rename --package v4l2-firmware --divert /lib/firmware/dvb-usb-dib0700-1.10.fw.wraped /lib/firmware/dvb-usb-dib0700-1.10.fw
 fi
 
