--- a/ubuntu/mythtv-0.23/debian/control
+++ b/ubuntu/mythtv-0.23/debian/control
@@ -90,7 +90,7 @@ Package: mythtv-backend
 Architecture: any
 Depends: mythtv-common (= ${source:Version}), ${shlibs:Depends}, cron, wget, transcode, ${misc:Depends}
 Conflicts: mythtv (<< 0.8-1)
-Replaces: mythtv (<< 0.8-1), mythtv-frontend (<= 0.20-0.4)
+Replaces: mythtv (<< 0.8-1), mythtv-frontend (<= 0.20-0.4), mythtv-transcode-utils
 Recommends: mythtv-database, logrotate, xmltv-util
 Suggests: mythtv-frontend, mythweb
 Description: A personal video recorder application (server)
