--- a/src/Orbiter/Makefile_padorbiter
+++ b/src/Orbiter/Makefile_padorbiter
@@ -1,7 +1,7 @@
 #<-dceag-mh-b->
 GENDEV=../Gen_Devices
 
-SNR_CPPFLAGS ?= -DKDE_LMCE
+SNR_CPPFLAGS ?= -DKDE_LMCE -DPADORBITER -DUSE_GTK
 SNR_LDFLAGS ?= 
 
 ROOT = ..
@@ -22,19 +22,19 @@ sources = Main.cpp Orbiter.cpp $(Gen_Dev_Files)
 #Note: For Nokia 770, do an export SNR_CPPFLAGS="-DMAEMO_NOKIA770" before doing a make clean; make bin
 
 
-#<-mkr_B_use_mysql_wrapper_b->
-#CPPFLAGS += -I/usr/include/mysql
-#LDFLAGS += -lmysqlclient_r
-#<-mkr_B_use_mysql_wrapper_e->
-
-#<-mkr_b_use_mysql_wrapper_b->
-#CPPFLAGS += -DUSE_MYSQL_WRAPPER
-#<-mkr_b_use_mysql_wrapper_e->
-
 CXXFLAGS += -O3
-CPPFLAGS += -I/usr/include/SDL -DPADORBITER -DORBITER -DCACHE_IMAGES -I$(ROOT)/Splitter -I$(ROOT)/OrbiterGen -I$(ROOT)/SDL_Helpers
+CPPFLAGS += -I/usr/include/SDL -DORBITER -DCACHE_IMAGES -I$(ROOT)/Splitter -I$(ROOT)/OrbiterGen -I$(ROOT)/SDL_Helpers
 LDFLAGS += -L/usr/X11R6/lib
 XTRALDLIBS += -lDCECommon -lSDL -lSDL_ttf -lSDL_image -lSGE -lSDL_gfx -lXtst -lXext -lXrender -lSDL_Helpers 
+
+# USE_GTK can be passed in as additional defines to SNR_CPPFLAGS to add support for GTK progress bars and prom
+# pt dialogues.
+ifeq (USE_GTK,$(findstring USE_GTK, $(SNR_CPPFLAGS)))
+CPPFLAGS += `pkg-config --cflags gtk+-x11-2.0`
+LDFLAGS += `pkg-config --libs gtk+-x11-2.0`
+sources += Linux/GTKPromptUser.cpp \
+ 	   Linux/GTKProgressWnd.cpp 
+endif
 
 # wmctrl wrapper
 CPPFLAGS += -I/usr/X11R6/include -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include
@@ -76,7 +76,6 @@ sources += \
 	SDL/StartOrbiterSDL.cpp \
 	$(ROOT)/Splitter/TextSplitter.cpp \
 	$(ROOT)/Splitter/TextWrapper.cpp \
-	Linux/X3DButton.cpp Linux/X3DWindow.cpp Linux/XProgressWnd.cpp Linux/XPromptUser.cpp \
 	../LIRC_DCE/IRReceiverBase.cpp \
 	$(ROOT)/utilities/linux/transparency/transparency.cpp \
 
