--- a/src/Pandora_Player/Makefile
+++ b/src/Pandora_Player/Makefile
@@ -4,6 +4,16 @@ GENDEV=../Gen_Devices
 SNR_CPPFLAGS ?= <-mkr_t_compile_defines->
 SNR_LDFLAGS ?= <-mkr_t_compile_libs->
 
+# External libs that Pandora Player needs
+EZXML=ezxml
+EZXML_SOURCES=ezxml.c
+
+WAITRESS=waitress
+WAITRESS_SOURCES=waitress.c
+
+PIANO=piano
+PIANO_SOURCES=crypt.c xml.c piano.c
+
 ROOT = ..
 CXX = g++
 CXXFLAGS = -Wall -fPIC -ggdb3
@@ -35,9 +45,21 @@ whattodo:
 
 all: bin so
 
-bin: Pandora_Player
+bin: libezxml.a libwaitress.a libpiano.a Pandora_Player
 
 so: Pandora_Player.so
+
+libezxml.a: $(EZXML_SOURCES:.c=.o)
+	$(AR) rc $@ $(call cpath,$+)
+	cp $@ ../lib
+
+libwaitress.a: $(WAITRESS_SOURCES:.c=.o)
+	$(AR) rc $@ $(call cpath,$+)
+	cp $@ ../lib
+
+libpiano.a: $(PIANO_SOURCES:.c=.o)
+	$(AR) rc $@ $(call cpath,$+)
+	cp $@ ../lib
 
 Pandora_Player.so: $(sources:.cpp=.o)
 	$(CXX) -shared -o $(MYNAME).so $(call cpath,$+) $(LDFLAGS) $(LDLIBS)
@@ -51,14 +73,14 @@ Pandora_Player: $(sources:.cpp=.o)
 	./post_make.sh $@
 
 clean: clean-recursive
-	rm -f $(call cpath,$(sources:.cpp=.o) $(sources:.cpp=.d)) Pandora_Player.bin Pandora_Player.so >/dev/null
+	rm -f $(EZXML_SOURCES:.c=.o) $(WAITRESS_SOURCES:.c=.o) $(PIANO_SOURCES:.c=.o) libpiano.a libwaitress.a libezxml.a $(call cpath,$(sources:.cpp=.o) $(sources:.cpp=.d)) Pandora_Player Pandora_Player.so >/dev/null
 
 package:
 	chmod +x make_package.sh
 	./make_package.sh $(MYNAME) $(VERSION) $(MYDEVTEMPLATEID)
 
 include $(ROOT)/PlutoUtils/make.rules
-ifeq (,$(findstring clean, $(MAKECMDGOALS)))
+	ifeq (,$(findstring clean, $(MAKECMDGOALS)))
 -include $(sources:.cpp=.d)
 endif
 #<-dceag-mf-e->
