--- a/ubuntu/v4l-modules-source/debian/control
+++ b/ubuntu/v4l-modules-source/debian/control
@@ -9,6 +9,7 @@ Package: v4l2-modules
 Architecture: all
 Depends: dkms, linux-firmware | v4l2-firmware
 Conflicts: v4l2-modules-2.6.22-14-generic
+replaces: v4l2-modules-304cfde05b3f, v4l2-modules-cc01851735c3
 Description: Video for Linux driver source code
  Video for Linux driver source code
 
